:ambulance: :lipstick: Final fix for over 100% width on mobile.

--- a/app/login/index.scss
+++ b/app/login/index.scss
@@ -15,8 +15,10 @@ body {
   color: #333;
   background-color: #FFF;
   padding: 2em;
-  height: 100%;
-  width: 100%;
+  @media #{$desktop_media_query} {
+    height: 100%;
+    width: 100%;
+  }
   &__h1 {
     font-size: 16pt;
     text-align: center;
